tests/baselines/reference/requireOfJsonFile.errors.txt
tests/cases/compiler/file1.ts(1,21): error TS2306: File 'tests/cases/compiler/b.json' is not a module.
tests/cases/compiler/file1.ts(3,21): error TS2306: File 'tests/cases/compiler/b.json' is not a module.


==== tests/cases/compiler/file1.ts (2 errors) ====
    import b1 = require('./b');
                        ~~~~~
!!! error TS2306: File 'tests/cases/compiler/b.json' is not a module.
    let x = b1.a;
    import b2 = require('./b.json');
                        ~~~~~~~~~~
!!! error TS2306: File 'tests/cases/compiler/b.json' is not a module.
    if (x) {
        let b = b2.b;
        x = (b1.b === b);
    }
    
==== tests/cases/compiler/b.json (0 errors) ====
    {
        "a": true,
        "b": "hello"
    }